fix Firefox spacing by removing CSS class conflict

--- a/civictechprojects/static/css/partials/_AboutProject.scss
+++ b/civictechprojects/static/css/partials/_AboutProject.scss
@@ -168,7 +168,7 @@
       }
 }
 
-.AboutProjects-details {
+.AboutProjects-details-description {
     white-space: pre-wrap;
 }
 
